[gd_scene load_steps=40 format=3 uid="uid://pckbjpamrmvp"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_jkvt0"]
[ext_resource type="Texture2D" uid="uid://5i4wfvmhbcba" path="res://Sprites/Enemy/Enemy_005_A.png" id="2_cghoh"]
[ext_resource type="Theme" uid="uid://dj2vxmvc7a34e" path="res://theme/ui.theme" id="3_bunoe"]
[ext_resource type="AudioStream" uid="uid://cm12u40ihiphg" path="res://Sounds/enemyHurt.wav" id="4_l0yhp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_51bvk"]
radius = 13.1529

[sub_resource type="AtlasTexture" id="AtlasTexture_fp1rq"]
atlas = ExtResource("2_cghoh")
region = Rect2(0, 288, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_i81eq"]
atlas = ExtResource("2_cghoh")
region = Rect2(144, 288, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vg2e"]
atlas = ExtResource("2_cghoh")
region = Rect2(288, 288, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1ut3"]
atlas = ExtResource("2_cghoh")
region = Rect2(432, 288, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7iia"]
atlas = ExtResource("2_cghoh")
region = Rect2(576, 288, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxpcd"]
atlas = ExtResource("2_cghoh")
region = Rect2(720, 288, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_38qfh"]
atlas = ExtResource("2_cghoh")
region = Rect2(0, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_13xo8"]
atlas = ExtResource("2_cghoh")
region = Rect2(144, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_b00bk"]
atlas = ExtResource("2_cghoh")
region = Rect2(288, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bctd3"]
atlas = ExtResource("2_cghoh")
region = Rect2(432, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tn2i"]
atlas = ExtResource("2_cghoh")
region = Rect2(576, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7arj2"]
atlas = ExtResource("2_cghoh")
region = Rect2(720, 432, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kdvu"]
atlas = ExtResource("2_cghoh")
region = Rect2(0, 576, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tax0"]
atlas = ExtResource("2_cghoh")
region = Rect2(144, 576, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_dveqh"]
atlas = ExtResource("2_cghoh")
region = Rect2(288, 576, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_en64o"]
atlas = ExtResource("2_cghoh")
region = Rect2(432, 576, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbqt3"]
atlas = ExtResource("2_cghoh")
region = Rect2(576, 576, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuayj"]
atlas = ExtResource("2_cghoh")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqmpb"]
atlas = ExtResource("2_cghoh")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_yflp1"]
atlas = ExtResource("2_cghoh")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_csw5u"]
atlas = ExtResource("2_cghoh")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e4a4"]
atlas = ExtResource("2_cghoh")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mihek"]
atlas = ExtResource("2_cghoh")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdtpd"]
atlas = ExtResource("2_cghoh")
region = Rect2(0, 144, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb3j3"]
atlas = ExtResource("2_cghoh")
region = Rect2(144, 144, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv2ee"]
atlas = ExtResource("2_cghoh")
region = Rect2(288, 144, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae06o"]
atlas = ExtResource("2_cghoh")
region = Rect2(432, 144, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_86imr"]
atlas = ExtResource("2_cghoh")
region = Rect2(576, 144, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_loxgs"]
atlas = ExtResource("2_cghoh")
region = Rect2(720, 144, 144, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_e3c4t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp1rq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i81eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vg2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1ut3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7iia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxpcd")
}],
"loop": true,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38qfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13xo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b00bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bctd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tn2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7arj2")
}],
"loop": true,
"name": &"Damaged",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kdvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tax0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dveqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en64o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbqt3")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuayj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqmpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yflp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csw5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e4a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mihek")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdtpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb3j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv2ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae06o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86imr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loxgs")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2wx50"]
radius = 17.6923
height = 35.3846

[sub_resource type="CircleShape2D" id="CircleShape2D_g54ep"]
radius = 163.0

[sub_resource type="CircleShape2D" id="CircleShape2D_skb8p"]
radius = 257.018

[sub_resource type="GDScript" id="GDScript_xrwqk"]

[node name="Enemy1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_jkvt0")

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_51bvk")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.750003, -14.25)
scale = Vector2(0.399306, 0.399306)
sprite_frames = SubResource("SpriteFrames_e3c4t")
animation = &"Idle"

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="DamageCollision" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 1)
scale = Vector2(1.3, 1)
shape = SubResource("CapsuleShape2D_2wx50")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_g54ep")

[node name="EscapeArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EscapeArea"]
shape = SubResource("CircleShape2D_skb8p")

[node name="TakeDamage" type="Timer" parent="."]
wait_time = 0.5

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.833694, 0, 0.099221, 1)
offset_left = -11.0
offset_top = -18.0
offset_right = 99.0
offset_bottom = -6.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("3_bunoe")
max_value = 200.0
show_percentage = false
script = SubResource("GDScript_xrwqk")

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_l0yhp")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="EscapeArea" to="." method="_on_escape_area_body_exited"]
[connection signal="timeout" from="TakeDamage" to="." method="_on_take_damage_timeout"]
[connection signal="timeout" from="TakeDamage" to="." method="_on_take_damage_cool_down_timeout"]
